tests/integration/tests/check_commands/CHECK/one_string/negative-match/01-negative_match/sample.itest
; RUN: %cat "%S/filecheck.input" | (%FILECHECK_EXEC "%S/filecheck.check" 2>&1; test $? = 1;) | %FILECHECK_TESTER_EXEC "%s" --strict-whitespace --match-full-lines
; CHECK:{{^.*}}FileCheck{{(\.py)?$}}
; CHECK:{{.*}}filecheck.check:1:10: error: CHECK: expected string not found in input{{$}}
; CHECK:{{^}}; CHECK: foo{{$}}
; CHECK:{{^}}         ^{{$}}
; CHECK:<stdin>:1:1: note: scanning from here
; CHECK:hello
; CHECK:^
; CHECK:<stdin>:1:3: note: possible intended match here
; CHECK:hello
; CHECK:  ^
; CHECK-EMPTY
